@@ -9,5 +9,6 @@ extern void mpz_random_nbit_prime(mpz_t p, UV n);
 extern void mpz_random_ndigit_prime(mpz_t p, UV n);
 
 extern void mpz_random_strong_prime(mpz_t p, UV nbits);
+extern void mpz_random_maurer_prime(mpz_t p, UV nbits);
 
 #endif
