@@ -3,12 +3,14 @@ Revision history for Perl module Math::Prime::Util::GMP
 0.43 2017-?
 
     - random_strong_prime(nbits)   random strong prob prime of nbits bits
+    - random_maurer_prime(nbits)   random nbits-bits proven prime
     - csprng_urandomb(n)           random number between 0 and 2^n-1
     - csprng_urandomr(lo,hi)       random number in [lo,hi], inclusive.
 
     [PERFORMANCE]
 
     - sieve_primes with small widths should perform much better.
+
 
 0.42 2017-02-27
 
